# Trackup-Desktop

./: .env  .gitignore  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  Login.tsx
src-tauri/: Cargo.toml  err.txt  err2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity.rs  api.rs  db.rs  idle.rs  lib.rs  models.rs  screenshot.rs  tray_generator.rs
src/components/: BreakModal.tsx  IdleModal.tsx  IdleWindow.tsx  PermissionsModal.tsx  QuitWindow.tsx
src/layouts/: LoginLayout.tsx
src/services/: auth.ts
